@@ -1075,177 +1075,3 @@ cholmod_factor *cholmod_factor_update(cholmod_factor *L, cholmod_sparse *A,
 		error(_("'%s' failed in '%s'"), "cholmod_change_factor", __func__);
 	return L;
 }
-
-#if 0
-static
-int R_cholmod_print_function(const char *fmt, ...)
-{
-	va_list(ap);
-	va_start(ap, fmt);
-	Rprintf((char *) fmt, ap);
-	va_end(ap);
-	return 0;
-}
-#endif
-
-static
-void R_cholmod_error_handler(int status, const char *file, int line,
-                             const char *message)
-{
-	R_cholmod_common_envget();
-	if (status < 0)
-		error(_("CHOLMOD error '%s' at file '%s', line %d"),
-		      message, file, line);
-	else
-		warning(_("CHOLMOD warning '%s' at file '%s', line %d"),
-		        message, file, line);
-}
-
-int R_cholmod_start(cholmod_common *Common)
-{
-	int ans = cholmod_start(Common);
-	if (!ans)
-		error(_("'%s' failed in '%s'"), "cholmod_start", __func__);
-#if 0
-	/* No longer, with SuiteSparse 5.7.1 : */
-	Common->print_function =
-# if 0
-		R_cholmod_print_function;
-# else
-		NULL;
-# endif
-#endif
-	Common->error_handler = R_cholmod_error_handler;
-	return ans;
-}
-
-int R_cholmod_finish(cholmod_common *Common)
-{
-	int ans = cholmod_finish(Common);
-	if (!ans)
-		error(_("'%s' failed in '%s'"), "cholmod_finish", __func__);
-	return ans;
-}
-
-SEXP cholmod_common_env;
-
-static
-SEXP
-	dboundSym,
-	grow0Sym,
-	grow1Sym,
-	grow2Sym,
-	maxrankSym,
-	supernodal_switchSym,
-	supernodalSym,
-	final_asisSym,
-	final_superSym,
-	final_llSym,
-	final_packSym,
-	final_monotonicSym,
-	final_resymbolSym,
-	prefer_zomplexSym,
-	prefer_upperSym,
-	quick_return_if_not_posdefSym,
-	nmethodsSym,
-	postorderSym,
-	m0_ordSym;
-
-SEXP R_cholmod_common_envini(SEXP rho) {
-	if (!isEnvironment(rho))
-		ERROR_INVALID_TYPE(rho, __func__);
-	cholmod_common_env = rho;
-	dboundSym = install("dbound");
-	grow0Sym = install("grow0");
-	grow1Sym = install("grow1");
-	grow2Sym = install("grow2");
-	maxrankSym = install("maxrank");
-	supernodal_switchSym = install("supernodal_switch");
-	supernodalSym = install("supernodal");
-	final_asisSym = install("final_asis");
-	final_superSym = install("final_super");
-	final_llSym = install("final_ll");
-	final_packSym = install("final_pack");
-	final_monotonicSym = install("final_monotonic");
-	final_resymbolSym = install("final_resymbol");
-	prefer_zomplexSym = install("final_zomplex");
-	prefer_upperSym = install("final_upper");
-	quick_return_if_not_posdefSym = install("quick_return_if_not_posdef");
-	nmethodsSym = install("nmethods");
-	postorderSym = install("postorder");
-	m0_ordSym = install("m0.ord");
-	R_cholmod_common_envset();
-	return R_NilValue;
-}
-
-void R_cholmod_common_envset(void) {
-	SEXP rho = cholmod_common_env, tmp;
-
-#define SET_FRAME_FROM_MEMBER(_MEMBER_, _KIND_) \
-	do { \
-		PROTECT(tmp = Scalar ## _KIND_(c. _MEMBER_)); \
-		defineVar(_MEMBER_ ## Sym, tmp, rho); \
-		UNPROTECT(1); \
-	} while (0)
-
-	SET_FRAME_FROM_MEMBER(dbound,                     Real);
-	SET_FRAME_FROM_MEMBER(grow0,                      Real);
-	SET_FRAME_FROM_MEMBER(grow1,                      Real);
-	SET_FRAME_FROM_MEMBER(grow2,                      Integer);
-	SET_FRAME_FROM_MEMBER(maxrank,                    Integer);
-	SET_FRAME_FROM_MEMBER(supernodal_switch,          Real);
-	SET_FRAME_FROM_MEMBER(supernodal,                 Logical);
-	SET_FRAME_FROM_MEMBER(final_asis,                 Logical);
-	SET_FRAME_FROM_MEMBER(final_super,                Logical);
-	SET_FRAME_FROM_MEMBER(final_ll,                   Logical);
-	SET_FRAME_FROM_MEMBER(final_pack,                 Logical);
-	SET_FRAME_FROM_MEMBER(final_monotonic,            Logical);
-	SET_FRAME_FROM_MEMBER(final_resymbol,             Logical);
-	SET_FRAME_FROM_MEMBER(prefer_zomplex,             Logical);
-	SET_FRAME_FROM_MEMBER(prefer_upper,               Logical);
-	SET_FRAME_FROM_MEMBER(quick_return_if_not_posdef, Logical);
-	SET_FRAME_FROM_MEMBER(nmethods,                   Integer);
-	SET_FRAME_FROM_MEMBER(postorder,                  Logical);
-
-	PROTECT(tmp = ScalarInteger(c.method[0].ordering));
-	defineVar(m0_ordSym, tmp, rho);
-	UNPROTECT(1);
-
-	return;
-}
-
-void R_cholmod_common_envget(void) {
-	SEXP rho = cholmod_common_env, tmp;
-
-#define GET_MEMBER_FROM_FRAME(_MEMBER_, _KIND_) \
-	do { \
-		PROTECT(tmp = findVarInFrame(rho, _MEMBER_ ## Sym)); \
-		c. _MEMBER_ = as ## _KIND_(tmp); \
-		UNPROTECT(1); \
-	} while (0)
-
-	GET_MEMBER_FROM_FRAME(dbound,                     Real);
-	GET_MEMBER_FROM_FRAME(grow0,                      Real);
-	GET_MEMBER_FROM_FRAME(grow1,                      Real);
-	GET_MEMBER_FROM_FRAME(grow2,                      Integer);
-	GET_MEMBER_FROM_FRAME(maxrank,                    Integer);
-	GET_MEMBER_FROM_FRAME(supernodal_switch,          Real);
-	GET_MEMBER_FROM_FRAME(supernodal,                 Logical);
-	GET_MEMBER_FROM_FRAME(final_asis,                 Logical);
-	GET_MEMBER_FROM_FRAME(final_super,                Logical);
-	GET_MEMBER_FROM_FRAME(final_ll,                   Logical);
-	GET_MEMBER_FROM_FRAME(final_pack,                 Logical);
-	GET_MEMBER_FROM_FRAME(final_monotonic,            Logical);
-	GET_MEMBER_FROM_FRAME(final_resymbol,             Logical);
-	GET_MEMBER_FROM_FRAME(prefer_zomplex,             Logical);
-	GET_MEMBER_FROM_FRAME(prefer_upper,               Logical);
-	GET_MEMBER_FROM_FRAME(quick_return_if_not_posdef, Logical);
-	GET_MEMBER_FROM_FRAME(nmethods,                   Integer);
-	GET_MEMBER_FROM_FRAME(postorder,                  Logical);
-
-	PROTECT(tmp = findVarInFrame(rho, m0_ordSym));
-	c.method[0].ordering = asInteger(tmp);
-	UNPROTECT(1);
-
-	return;
-}
