@@ -5,6 +5,37 @@
 cholmod_common c ;
 cholmod_common cl;
 
+static
+void Matrix_cholmod_error_handler(int status, const char *file, int line,
+                                  const char *message)
+{
+	cholmod_defaults(&c);
+	if (status < 0)
+		error(_("CHOLMOD error '%s' at file '%s', line %d"),
+		      message, file, line);
+	else
+		warning(_("CHOLMOD warning '%s' at file '%s', line %d"),
+		        message, file, line);
+	return;
+}
+
+int Matrix_cholmod_start(cholmod_common *Common)
+{
+	int ans = cholmod_start(Common);
+	if (!ans)
+		error(_("'%s' failed in '%s'"), "cholmod_start", __func__);
+	Common->error_handler = Matrix_cholmod_error_handler;
+	return ans;
+}
+
+int Matrix_cholmod_finish(cholmod_common *Common)
+{
+	int ans = cholmod_finish(Common);
+	if (!ans)
+		error(_("'%s' failed in '%s'"), "cholmod_finish", __func__);
+	return ans;
+}
+
 cholmod_factor *M2CHF(SEXP obj, int values)
 {
 	cholmod_factor *L = (cholmod_factor *) R_alloc(1, sizeof(cholmod_factor));
