@@ -8,6 +8,9 @@
 extern cholmod_common c ;
 extern cholmod_common cl;
 
+int Matrix_cholmod_start (cholmod_common *);
+int Matrix_cholmod_finish(cholmod_common *);
+
 cholmod_factor *M2CHF(SEXP, int);
 cholmod_sparse *M2CHS(SEXP, int);
 cholmod_dense  *M2CHD(SEXP, int);
