@@ -855,12 +855,6 @@ static
 int pCMatrix_trf_(cholmod_sparse *A, cholmod_factor **L,
                   int perm, int ldl, int super, double mult)
 {
-	/* defined in ./chm_common.c : */
-	void R_cholmod_common_envget(void);
-	void R_cholmod_common_envset(void);
-
-	R_cholmod_common_envset();
-
 	if (*L == NULL) {
 		if (perm == 0) {
 			c.nmethods = 1;
@@ -890,7 +884,7 @@ int pCMatrix_trf_(cholmod_sparse *A, cholmod_factor **L,
 	beta[1] = 0.0;
 	int res = cholmod_factorize_p(A, beta, NULL, 0, *L, &c);
 
-	R_cholmod_common_envget();
+	cholmod_defaults(&c);
 
 	return res;
 }
