@@ -269,7 +269,6 @@ static R_CallMethodDef CallEntries[] = {
 	CALLDEF(R_Matrix_as_general, 2),
 
 	CALLDEF(R_Matrix_version, 0),
-	CALLDEF(R_cholmod_common_envini, 1),
 
 	{NULL, NULL, 0}
 };
@@ -379,12 +378,12 @@ void attribute_visible R_init_Matrix(DllInfo *info)
 	Matrix_zzero.r = 0.0; Matrix_zone.r = 1.0; Matrix_zna.r = NA_REAL;
 	Matrix_zzero.i = 0.0; Matrix_zone.i = 0.0; Matrix_zna.i = NA_REAL;
 
-	R_cholmod_start(&c);
+	Matrix_cholmod_start(&c);
 	return;
 }
 
 void R_unload_Matrix(DllInfo *info)
 {
-	R_cholmod_finish(&c);
+	Matrix_cholmod_finish(&c);
 	return;
 }
